--- a/src/meson.build
+++ b/src/meson.build
@@ -1,9 +1,11 @@
 bobaclient_srcs = [
   'bobaclient.cpp',
+  'curl.cpp',
 ]
 executable(
   'bobaclient',
   bobaclient_srcs,
   dependencies: [curl_dep],
+  include_directories: include,
   install: true,
 )
