--- a/src/meson.build
+++ b/src/meson.build
@@ -1,14 +1,3 @@
-cli_srcs = [
-  'cli.cpp',
-]
-executable(
-  'bobaclient',
-  cli_srcs,
-  include_directories: include,
-  dependencies: [curl_dep],
-  install: true,
-)
-
 lib_srcs = [
   'bobaclient.cpp',
 ]
@@ -18,5 +7,17 @@ lib = library(
   soversion: soversion,
   include_directories: include,
   dependencies: [curl_dep],
+  install: true,
+)
+
+cli_srcs = [
+  'cli.cpp',
+]
+executable(
+  'bobaclient',
+  cli_srcs,
+  include_directories: include,
+  dependencies: [curl_dep],
+  link_with: lib,
   install: true,
 )
