Rename lib from libbobaclient to just bobaclient

--- a/meson.build
+++ b/meson.build
@@ -20,7 +20,7 @@ pkg_mod = import('pkgconfig')
 pkg_mod.generate(
   libraries: lib,
   version: meson.project_version(),
-  name: 'libbobaclient',
+  name: 'bobaclient',
   filebase: 'bobaclient',
   description: 'Library to interact with bobashare',
 )
