WIP printing stuff

--- a/include/meson.build
+++ b/include/meson.build
@@ -1,5 +1,6 @@
 install_headers(
     'bobaclient/bobaclient.hpp',
+    'bobaclient/display.hpp',
     'bobaclient/errors.hpp',
     'bobaclient/json.hpp',
     'bobaclient/types.hpp',
